# psx-sdk-rs

./: Cargo.toml  README.md
.cargo/: config.toml
examples/bios/src/: boot.rs  exceptions.rs  handlers.rs  main.rs
examples/gamepad/: Cargo.toml
examples/gamepad/src/: main.rs
patches/: README.md  llvm_atomic_fence.patch
psx/: Cargo.toml  build.rs  rust-toolchain.toml
psx/.cargo/: config.toml
psx/src/: critical_section_impl.rs  dma.rs  framebuffer.rs  lib.rs  math.rs  std.rs
psx/src/format/: obj.rs  tim.rs
psx/src/gpu/: mod.rs  packet.rs  vertex.rs
psx/src/gpu/primitives/: macros.rs
psx/src/heap/: linked_list.rs
psx/src/hw/: cop.rs  gte.rs  mmio.rs  mod.rs
psx/src/hw/cdrom/: controller.rs
psx/src/hw/gpu/: gp0.rs  gp1.rs  status.rs
psx/src/hw/spu/: README.md  mod.rs  reverb.rs  volume.rs
psx/src/hw/spu/src/: memory.rs  volume.rs
psx/src/sys/: cdrom.rs  event.rs  fs.rs  gamepad.rs  heap.rs  kernel.rs  mod.rs  patch.rs  rng.rs  trampoline.s  tty.rs
scripts/: bios.txt
src/: lib.rs  memory.rs
