[package]
name = "ps1-spu"
readme = "README.md"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["techmetx11 <techmetx11@disroot.org>"]
keywords = ["playstation", "no_std", "audio"]
categories = ["embedded", "game-development", "no-std"]

[package.metadata.docs.rs]
targets = ["mipsel-sony-psx"]

[dependencies]
psx = "0.1.8"
paste = "1.0.15"
bitfield-struct = "0.13.0"
