[package]
name = "psx"
version = "0.1.8"
description = "Library for developing homebrew for the Sony PlayStation 1"
readme = "../README.md"
repository = "https://github.com/ayrtonm/psx-sdk-rs"
license = "MIT"
authors = ["Ayrton Muñoz <a.munoz3327@gmail.com>"]
edition = "2021"
keywords = ["playstation", "homebrew", "no_std"]
categories = ["embedded", "game-development", "no-std"]

[package.metadata.docs.rs]
targets = ["mipsel-unknown-linux-gnu"]
rustc-args = ["--cfg", "heap"]
cargo-args = ["--features", "psx/heap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1", features = ["restore-state-bool"], optional = true }

[dependencies.linked_list_allocator]
version = "0.10.3"
optional = true
default-features = false
features = ["const_mut_refs"]

[dev-dependencies]
num = { version = "0.4.0", default-features = false }
const-random = "0.1.13"

[features]
NA_region = []
EU_region = []
J_region = []
no_panic = []
min_panic = []
loadable_exe = []
custom_oom = []
heap = ["dep:linked_list_allocator"]
nightlier = []
critical-section = ["dep:critical-section"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature,values("nonexistent_feature"))',
] }

[lib]
doctest = false
